namespace Ludo
{
    public static class Constants
    {
        public const string SCENE_MAIN = "MainScene";
        public const string SCENE_GAME = "GameScene";

        public const string DIE_ROLL_TRIGGER = "rollDie";
        public const string DIE_RESET_TRIGGER = "resetDie";
        public const string DIE_NUMBER_INTEGER= "dieNumber";
    }
}